Resolves: tdf#83461 do not override MatColsRows if already set

ScMatrixFormulaCellToken::SetMatColsRows() via
ScFormulaCell::SetMatColsRows() is used during document import and
preselected cell area input of an array formula. Do not override
existing values with subsequent result matrix dimensions.

Change-Id: I9e844b5064ea276f3cbcb680eb1127c344328e00
(cherry picked from commit e32eff2bb4c12fdc33e476b9f12bb4bb71d22ebc)